tests/ui/compile-fail/init/missing_comma.stderr
error: expected `,`
  --> tests/ui/compile-fail/init/missing_comma.rs:16:9
   |
16 |         c: Bar,
   |         ^
